--- a/HTML/Style.css
+++ b/HTML/Style.css
@@ -1,6 +1,12 @@
+.text {
+    color: aliceblue;
+}
 img {
     max-width: 200;
     max-height: 200;
     min-width: 200;
     min-width: 200;
+}
+body {
+    background-color: #111;
 }
